# athena

./: .gitignore  Doxyfile  README.md
athena/: CMakeLists.txt  package.xml
athena/include/athena/: athena.h
html/: ____init_____8py.html  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  athena_8h.html  athena_8h_source.html  bounding__geometry_8cpp.html  bounding__geometry_8h.html  bounding__geometry_8h_source.html  classathena_1_1pointcloud_1_1_planar_model-members.html  classathena_1_1pointcloud_1_1_planar_model.html  classathena_1_1pointcloud_1_1_planar_model_a0ee04fa3ae51a2a3653ce4e9ed2b890a.html  classathena_1_1pointcloud_1_1_planar_model_a15199dfc85671faf7732031c71acee38.html  classathena_1_1pointcloud_1_1_planar_model_a7201f199291c945435e6daabfcc48412.html  classathena_1_1pointcloud_1_1_planar_model_a75d7634f2a4ce6e9c041cb44270fb087.html  classathena_1_1pointcloud_1_1_planar_model_a7792ebb6336808277abc2aa19167f724.html  classathena_1_1pointcloud_1_1_planar_model_aa31c1f1ea6ac0d4892cd0416eab3829f.html  classathena_1_1pointcloud_1_1_planar_model_aa77ba3995dd0ab3cf50e9cee14a4a2ef.html  classathena_1_1pointcloud_1_1_planar_model_aabfa7b1181fec424c4c044697f3eb494.html  classathena_1_1pointcloud_1_1_planar_model_ab4d91eb1723e6f922ffe97a1a28704ba.html  classathena_1_1pointcloud_1_1_planar_model_ad47c3101108a5b809d4be1071a73cc1d.html  classathena_1_1pointcloud_1_1_planar_model_ae3a55b0f3baa4ffbeaa31e4a0963f3f5.html  classathena__transform_1_1transformations_1_1_arcball-members.html  classathena__transform_1_1transformations_1_1_arcball.html  classathena__transform_1_1transformations_1_1_arcball_a06006a803aed05b4622f052a816ae9f7.html  classathena__transform_1_1transformations_1_1_arcball_a276e3a3fef6ea18d915a237b8f413f1e.html  classathena__transform_1_1transformations_1_1_arcball_a41967f413694cd3cf3f5abeb38954661.html  classathena__transform_1_1transformations_1_1_arcball_a8d5740555209c8543a8b53a15a11d701.html  classathena__transform_1_1transformations_1_1_arcball_a8db1cb4e6c64e9b3a897dca9909ce530.html  classathena__transform_1_1transformations_1_1_arcball_a98ad2aeb3c1573c607053c6225e3ba8a.html  classathena__transform_1_1transformations_1_1_arcball_acce3b6caf08abade7166a091a26dbe3c.html  classathena__transform_1_1transformations_1_1_arcball_afa4ed87d36b0fb8f43e0fef34f6f5f06.html  classathena__transform_1_1transformations_1_1_arcball_afa595a73ab37f21593b6efd8d90b0090.html  classes.html  conversions_8py.html  dir_0040099accfb59aa642902905f362acc.html  dir_05604b84d9d9506c648f8020792c6cad.html  dir_17229b05282e58c3517c94e7f2eb5e1b.html  dir_190e9e64fb890467c89befc1abca1701.html  dir_1f378985d3dd0d71730919633fdd6491.html  (+265 more)
html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  files_1.js  files_2.js  files_3.js  files_6.js  files_7.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  (+26 more)
msgs/: CMakeLists.txt  package.xml
msgs/include/athena/msgs/: messages.h
msgs/msg/: HomogeneousTransforms.msg  PlanarModel.msg
parsers/: CMakeLists.txt  package.xml
parsers/include/athena/parsers/: parser_utils.h
parsers/src/: parser_utils.cpp
pointcloud/: CMakeLists.txt  package.xml
pointcloud/include/athena/pointcloud/: bounding_geometry.h  conversions.h  cropping.h  planar.h  registration.h  utils.h
pointcloud/src/: bounding_geometry.cpp  conversions.cpp  cropping.cpp  planar.cpp  registration.cpp  segmentation.cpp  utils.cpp
pointcloud_conversions/: CMakeLists.txt  package.xml
pointcloud_conversions/include/athena/pointcloud/: conversions.h  utils.h
pointcloud_conversions/src/: conversions.cpp  utils.cpp
transform/: CMakeLists.txt  README.md  package.xml  setup.py
transform/include/athena/transform/: conversions.h
transform/msg/: HomogenousTransforms.msg
transform/pointcloud/: package.xml
transform/pointcloud/include/athena/pointcloud/: conversions.h  utils.h
transform/pointcloud/msg/: CloudGeometries.msg  CloudGeometry.msg
transform/pointcloud/src/: conversions.cpp  planar.cpp
transform/src/: conversions.cpp
transform/src/athena_transform/: conversions.py  transformations.py
transform_conversions/: CMakeLists.txt  package.xml
transform_conversions/include/athena/transform/: conversions.h
transform_conversions/src/: conversions.cpp
visualization/: CMakeLists.txt  package.xml
visualization/include/athena/visualization/: utils.h
visualization/src/: utils.cpp
visualization_conversions/: CMakeLists.txt  package.xml
visualization_conversions/include/athena/visualization/: utils.h
visualization_conversions/src/: utils.cpp
