<?xml version="1.0"?>
<package format="1">
  <name>athena</name>
  <version>0.0.0</version>
  <description>The athena package</description>

  <maintainer email="jaymwong@csail.mit.edu">Jay M. Wong</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
