<?xml version="1.0"?>
<package format="2">
  <name>athena</name>
  <version>0.0.0</version>
  <description>The athena package</description>

  <maintainer email="jmwong@csail.mit.edu">Jay M. Wong</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>transform_conversions</depend>
  <depend>pointcloud_conversions</depend>
  <depend>visualization_conversions</depend>
  <depend>message_generation</depend>
  <export>

  </export>
</package>
