<?xml version="1.0"?>
<package format="2">
  <name>athena_parsers</name>
  <version>0.0.0</version>
  <description>The athena_parsers package</description>

  <maintainer email="jmwong@csail.mit.edu">Jay M. Wong</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <export>

  </export>
</package>
