<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_conversions</name>
  <version>0.0.0</version>
  <description>The pointcloud_conversions package</description>

  <maintainer email="jmwong@csail.mit.edu">Jay M. Wong</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <export>

  </export>
</package>
